# ai-shell

./: .gitignore  CLAUDE.md  Makefile  README.md
api/: .env.example  .gitignore  README.md  pyproject.toml
api/llm_shell/: __init__.py  config.py  exceptions.py  main.py
api/llm_shell/api/: __init__.py  assistant.py  groups.py  import_config.py  keypairs.py  servers.py  sessions.py  settings.py
api/llm_shell/db/: __init__.py  database.py  schema.sql
api/llm_shell/models/: __init__.py  command_logs.py  common.py  groups.py  keypairs.py  servers.py  settings.py
api/llm_shell/services/: __init__.py  ai.py  command_logs.py  groups.py  keypairs.py  logging.py  output_buffer.py  reconnection.py  security.py  servers.py  session_manager.py  settings.py  sftp.py  ssh_config.py  ssh_session.py
api/tests/: conftest.py  test_ai_chat.py  test_ai_prompt.py  test_ai_retry.py  test_ai_token_budget.py  test_ai_tools.py  test_assistant_sse.py  test_command_logs.py  test_groups.py  test_import_api.py  test_keypairs.py  test_logging.py  test_main.py  test_output_buffer.py  test_probe_server.py  test_reconnection.py  test_security.py  test_servers.py  test_session_manager.py  test_settings.py  test_sftp.py  test_sftp_api.py  test_ssh_config.py  test_ssh_session.py  test_static_files.py  test_terminal_websocket.py
docs/: data-api-design.md  llm-shell.md
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  progress.md  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css  main.test.tsx  queryClient.ts
web/src/hooks/: useChat.test.ts  useChat.ts  (+14 more)
(+66 files in other folders)
